--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button id="levelDown"class="button">Level down</button>
         </div>
         <script src="/scripts/requests.js"></script>
-        <script src="/scripts/hangman.js"></script>
+        <script src="/scripts/Hangman.js"></script>
         <script src="/scripts/app.js"></script>
     </body>
 </html>
